openshift_exports/cluster_export/bbitai-dev-2026-03-20T15_31_03Z/bbitai-dev/Ingress_networking.k8s.io_v1_bbitai-dev_photo-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web8090
    traefik.ingress.kubernetes.io/router.middlewares: default-photo-stripprefix@kubernetescrd
  name: photo-service-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: photo-service
            port:
              number: 3000
        path: /api/photo
        pathType: Prefix
